--- a/public/styles/logistics.css
+++ b/public/styles/logistics.css
@@ -369,17 +369,9 @@ h2 {
 
 /* Для планшетов (ширина < 1024px) */
 @media screen and (max-width: 1024px) {
-
-    .center {
-        color: white;
-        background-color: black;
-        padding-left: calc(50% - 100px);
-        padding-right: calc(50% - 100px);
-        margin-top: 2%;
-    }
-
     .road {
         background-size: cover; /* Масштабируем фон */
+
     }
 
     .lines {
@@ -414,6 +406,76 @@ h2 {
 
 /* Для мобильных устройств (ширина < 768px) */
 @media screen and (max-width: 768px) {
+    .road {
+        margin-top: 100px;
+        width: 300px;
+        height: 200px;
+    }
+
+    .line_1 {
+        position: absolute;
+        left: 1%;
+        top: -190px;
+        height: 100px;
+    }
+
+    .shape_1 {
+        font-size: 10px;
+        width: 80px;
+        height: 40px;
+    }
+
+    .line_2{
+        position: absolute;
+        left: 30%;
+        top: -185px;
+        height: 100px;
+    }
+
+    .shape_2 {
+        width: 80px;
+        height: 40px;
+        font-size: 10px;
+    }
+
+    .line_3 {
+        position: absolute;
+        left: 50%;
+        top: -270px;
+        height: 100px;
+    }
+
+    .shape_3 {
+        font-size: 10px;
+        width: 85px;
+        height: 40px;
+    }
+
+    .line_4 {
+        position: absolute;
+        left: 70%;
+        top: -234px;
+        height: 180px;
+}
+
+    .shape_4 {
+        font-size: 10px;
+        width: 90px;
+        height: 40px;
+    }
+
+    .line_5{
+        position: absolute;
+        left: 90%;
+        top: -254px;
+        height: 120px;
+    }
+
+    .shape_5 {
+        font-size: 10px;
+        width: 115px;
+        height: 50px;
+    }
 
     .center {
         color: white;
@@ -452,31 +514,5 @@ h2 {
     .under-button-text2 {
         font-size: 14px;
         width: 100%;
-    }
-}
-
-/* Для маленьких экранов (ширина < 480px) */
-@media screen and (max-width: 480px) {
-    h1 {
-        font-size: 1.5rem;
-        text-align: center;
-    }
-
-    .shape_1, .shape_2, .shape_3, .shape_4, .shape_5 {
-        width: 100%;
-        font-size: 12px;
-    }
-
-    .cargo-form-input {
-        font-size: 12px;
-        height: 40px;
-    }
-
-    .icon-item img {
-        width: 50%;
-    }
-
-    .cargo-submit-button {
-        font-size: 14px;
     }
 }
