--- a/public/styles/mobile.css
+++ b/public/styles/mobile.css
@@ -1,4 +1,9 @@
 
+
+body, html {
+    overflow-x: hidden;
+}
+
 @media (max-width: 1200px) {
     .center {
         padding-left: 5%;
@@ -8,17 +13,15 @@
 
 @media (max-width: 768px) {
     .center {
-        padding-left: calc(2% - 200px);
-        padding-right: calc(2% - 200px);
-        text-align: center; /* Центрируем текст */
+        padding-left: 2%;
+        padding-right: 2%;
     }
 }
 
 @media (max-width: 480px) {
     .center {
-        padding-left: calc(1% - 100px);
-        padding-right: calc(1% - 100px);
-        text-align: center;
+        padding-left: 1%;
+        padding-right: 1%;
     }
 }
 
