--- a/public/styles/viza.css
+++ b/public/styles/viza.css
@@ -338,6 +338,22 @@ body {
 }
 
 @media (max-width: 768px) {
+    .step-title {
+        font-size: 15px;
+    }
+
+    .step-desc {
+        font-size: 13px;
+    }
+
+    .visa-process-title {
+        width: 400px;
+        font-size: 20px;
+        display: flex;
+        gap: 7px;
+        margin-left: -30px;
+    }
+
     .row.last-row {
         .visa-card {
             width: 70%;
@@ -353,7 +369,7 @@ body {
     }
 
     .visa-process-images {
-        margin-left: 30px;
+        margin-left: -10px;
         margin-top: 0;
     }
 
@@ -362,12 +378,16 @@ body {
     }
 
     .step-ten-line {
-        width: 100px;
+        width: 80px;
+    }
+
+    .visa-process-note {
+        font-size: 12px;
     }
 
     .visa-process-text {
         gap: 25px;
-        margin-left: 50px;
+        margin-left: 0;
     }
 
     .step-circle {
