--- a/public/templates/home.ejs
+++ b/public/templates/home.ejs
@@ -104,7 +104,7 @@
                     <p class="promo-title">Акция</p>
                     <p class="promo-subtitle"><span>Студенческая</span> учебная виза Х1, Х2 за <span>11 000</span> под ключ!</p>
                     <p class="promo-description">
-                        В стоимость входит консультирование, подготовка документов, все сборы,<br>оформление визы! Срок выполнения - 3 рабочих дня!
+                        В стоимость входит консультирование, подготовка документов, <br>все сборы, оформление визы! Срок выполнения - 3 рабочих дня!
                     </p>
                     <button id="openPopup" class="promo-button">Заказать</button>
                     <p class="promo-note">
