--- a/public/styles/mobile.css
+++ b/public/styles/mobile.css
@@ -2,6 +2,8 @@
 
 body, html {
     overflow-x: hidden;
+    align-items: center;
+
 }
 
 @media (max-width: 1200px) {
@@ -27,61 +29,41 @@ body, html {
 
 
 /* HEADER */
-@media (max-width: 768px) {
+@media (max-width: 480px) {
     .info-home {
         flex-direction: column; /* Размещаем блоки в колонку */
-        align-items: center;
+        align-items: flex-start;
         gap: 15px; /* Оптимальный отступ */
         padding-top: 10px;
+        padding-right: 120px;
     }
 
     .image-block {
         flex-direction: column;
-        align-items: center;
+        align-items: flex-start;
         gap: 10px;
     }
 
     .logo_2 {
-        max-width: 50px; /* Логотип уменьшаем, но не слишком */
+        width: 45px; /* Логотип уменьшаем, но не слишком */
     }
 
     .company {
-        max-height: 40px;
+        height: 45px;
     }
 
 
     .icon-block img {
-        width: 24px; /* Компактные, но видимые иконки */
-    }
-
-    .phone-block {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 10px; /* Минимальное расстояние */
-    }
-}
-
-@media (max-width: 480px) {
-
-    .image-block {
-        gap: 5px;
-    }
-
-    .logo_2 {
-        max-width: 40px;
-    }
-
-    .company {
-        max-height: 30px;
-    }
-
-    .icon-block img {
-        width: 20px;
+        width: 25px !important; /* Компактные, но видимые иконки */
+        height: 25px !important;
     }
 
     .phone-block a {
-        font-size: 0.9rem;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 10px; /* Минимальное расстояние */
+        font-size: 17px !important;
     }
 }
 
