--- a/public/templates/home.ejs
+++ b/public/templates/home.ejs
@@ -80,17 +80,17 @@
         <div class="photo-row">
             <div class="photo-container">
                 <img src="../img/orangeRectangle.png" alt="Photo 1" class="gallery-img-1" style="top: -255%; left: 1%;">
-                <img src="../img/icon_home/1.png" alt="Icon 1" class="icon" style="top: -306%; left: -41%;"> <!-- Иконка для фото 1 -->
-                <div class="photo-text-1" style="top: -300%; left: -27px;">Аккредитованы<br>в консульстве</div>
+                <img src="../img/icon_home/1.png" alt="Icon 1" class="icon-1" style="top: -306%; left: -41%;"> <!-- Иконка для фото 1 -->
+                <div class="photo-text-1"style="top: -300%; left: -27px;">Аккредитованы<br>в консульстве</div>
             </div>
             <div class="photo-container">
                 <img src="../img/orangeRectangle.png" alt="Photo 2" class="gallery-img-2" style="top: -255%; left: 1%;">
-                <img src="../img/icon_home/2.png" alt="Icon 2" class="icon" style="top: -306%; left: -41%;"> <!-- Иконка для фото 2 -->
+                <img src="../img/icon_home/2.png" alt="Icon 2" class="icon-2" style="top: -306%; left: -41%;"> <!-- Иконка для фото 2 -->
                 <div class="photo-text-2" style="top: -300%; left: -27px;">Оплата после<br>получения визы</div>
             </div>
             <div class="photo-container">
                 <img src="../img/orangeRectangle.png" alt="Photo 3" class="gallery-img-3" style="top: -255%; left: 1%;">
-                <img src="../img/icon_home/3.png" alt="Icon 3" class="icon" style="top: -306%; left: -41%;"> <!-- Иконка для фото 3 -->
+                <img src="../img/icon_home/3.png" alt="Icon 3" class="icon-3" style="top: -306%; left: -41%;"> <!-- Иконка для фото 3 -->
                 <div class="photo-text-3" style="top: -300%; left: -27px;">Работаем 24/7<br>по всей стране</div>
             </div>
         </div>
