--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -653,8 +653,8 @@ footer {
     .photo-row {
         display: flex;
         flex-direction: column;
-        margin-top: -100px;
-        margin-bottom: 0;
+        margin-top: -80px;
+        margin-bottom: -50px;
         gap: 10px;
     }
 
