--- a/public/templates/logistics.ejs
+++ b/public/templates/logistics.ejs
@@ -44,13 +44,13 @@
             <img src="../img/ship.png" alt="ship">
             <div class="icon-text">Морские перевозки</div>
         </div>
-        <div class="icon-item">
+        <div class="icon-item-plane">
             <img src="../img/plane.png" alt="plane">
             <div class="icon-text">Авиаперевозки</div>
         </div>
     </div>
     <div class="form">
-        <h2>Узнайте условия доставки<br>и рассчитайте её <span style="color: rgb(255, 88, 29);">стоимость</span></h2>
+        <h2 class="h2-form">Узнайте условия доставки<br>и рассчитайте её <span style="color: rgb(255, 88, 29);">стоимость</span></h2>
         <div class="cargo-form">
             <p class="form_title_name">Наименование груза</p>
             <input type="text" id="cargo-name" name="Cargo name" class="cargo-form-input" placeholder="Например: автозапчасти">
