--- a/public/styles/migration.css
+++ b/public/styles/migration.css
@@ -254,6 +254,7 @@ li::before {
     .documents {
         flex-direction: column;
         align-items: center;
+        width: 140%;
     }
 
     .document-list,
@@ -307,7 +308,7 @@ li::before {
     }
 
     .documents {
-        gap: 20px;
+        gap: 0;
     }
 
     .document-list,
@@ -317,7 +318,11 @@ li::before {
 
     .load-documents {
         font-size: 18px;
-        padding: 10px;
+        padding: 15px;
         width: 90%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        left: 60px;
     }
 }
