--- a/public/templates/viza.ejs
+++ b/public/templates/viza.ejs
@@ -109,7 +109,7 @@
         <div class="photo-item"><img src="../img/type_visa/F.png" alt="Фото 3"></div>
         <div class="line"></div>
         <div class="photo-item"><img src="../img/type_visa/Z.png" alt="Фото 4"></div>
-        <div class="line"></div>
+        <div class="line-delete"></div>
         <div class="photo-item"><img src="../img/type_visa/S1.png" alt="Фото 5"></div>
         <div class="line"></div>
         <div class="photo-item"><img src="../img/type_visa/S2.png" alt="Фото 6"></div>
@@ -117,11 +117,13 @@
         <div class="photo-item"><img src="../img/type_visa/X1.png" alt="Фото 7"></div>
         <div class="line"></div>
         <div class="photo-item"><img src="../img/type_visa/X2.png" alt="Фото 8"></div>
-        <div class="line"></div>
+        <div class="line-delete"></div>
         <div class="photo-item"><img src="../img/type_visa/Q.png" alt="Фото 9"></div>
         <div class="line"></div>
         <div class="photo-item"><img src="../img/type_visa/C.png" alt="Фото 10"></div>
+        </div>
     </div>
+</div>
     <div class="visa-price-heading">
         <span>Стоимость</span> оформления визы,<br>включая Консульский сбор
     </div>
