--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -770,8 +770,8 @@ footer {
     }
 
     .icon-item-plane {
-        top: -7px;
-        height: 145px;
+        width: 108px;
+        height: 155px;
     }
 
     .icon-text {
