--- a/public/styles/logistics.css
+++ b/public/styles/logistics.css
@@ -201,7 +201,6 @@ h1{
     padding-left: 20px; /* Отступ слева */
 }
 
-/* Стили для каждого элемента (train, ship, plane) */
 .icon-item {
     position: relative; /* Для позиционирования текста */
     text-align: center; /* Выравнивание текста по центру */
@@ -230,6 +229,7 @@ h1{
     margin-top: 8px; /* Добавляем отступ сверху, чтобы текст не прилипал к изображению */
 }
 
+.icon-item-plane img,
 .icon-item img{
     width: 90%;
     height: auto;
@@ -393,7 +393,7 @@ h2 {
     }
 
     .icon-item img {
-        width: 70%; /* Делаем иконки меньше */
+        width: 90%; /* Делаем иконки меньше */
     }
 
     .icon-text {
@@ -411,8 +411,11 @@ h2 {
     }
 }
 
-/* Для мобильных устройств (ширина < 768px) */
 @media screen and (max-width: 768px) {
+    .icon-item-plane img {
+        width: 90%;
+    }
+
     .road {
         margin-top: 100px;
         width: 300px;
@@ -500,10 +503,6 @@ h2 {
 
     .icons-container {
         flex-direction: column; /* Иконки в столбик */
-    }
-
-    .icon-item img {
-        width: 60%;
     }
 
     .cargo-form {
