--- a/public/templates/logistics.ejs
+++ b/public/templates/logistics.ejs
@@ -38,13 +38,13 @@
     <div class="icons-container">
         <div class="icon-item">
             <img src="../img/train.png" alt="train">
-            <div class="icon-text">Ж/Д перевозки</div>
+            <div class="icon-text" style="width: 200%;">Ж/Д перевозки</div>
         </div>
         <div class="icon-item">
             <img src="../img/ship.png" alt="ship">
-            <div class="icon-text">Морские перевозки</div>
+            <div class="icon-text" style="width: 200%;">Морские перевозки</div>
         </div>
-        <div class="icon-item-plane">
+            <div class="icon-item">
             <img src="../img/plane.png" alt="plane">
             <div class="icon-text">Авиаперевозки</div>
         </div>
