--- a/public/templates/home.ejs
+++ b/public/templates/home.ejs
@@ -102,9 +102,9 @@
                 </div>
                 <div class="promo-content">
                     <p class="promo-title">Акция</p>
-                    <p class="promo-subtitle"><span>Студенческая</span> учебная виза Х1, Х2 за <span>11 000</span> под ключ!</p>
+                    <p class="promo-subtitle">Виза на кантонскую выставку за 14 000 под ключ!</p>
                     <p class="promo-description">
-                        В стоимость входит консультирование, подготовка документов, <br>все сборы, оформление визы! Срок выполнения - 3 рабочих дня!
+                        В стоимость входит все сборы, оформление визы, приглашение на кантонскую выставку и предварительная регистрация! Срок выполнения - 3 рабочих дня!
                     </p>
                     <button id="openPopup" class="promo-button">Заказать</button>
                     <p class="promo-note">
